--- a/package.json
+++ b/package.json
@@ -91,7 +91,6 @@
     "ipaddr.js": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "loki-grpc-client": "1.0.5",
     "memoizee": "^0.4.15",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
@@ -116,6 +115,9 @@
     "typescript": "^4.8.2",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
+  },
+  "optionalDependencies": {
+    "loki-grpc-client": "^1.0.5"
   },
   "devDependencies": {
     "@balena/lint": "^6.2.0",
