--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "scripts": {
     "fasttest": "./automation/fasttest.sh",
     "fasttest-debug": "./automation/fasttest.sh --debug",
-    "fasttest-stop": "docker compose -f docker-compose.test.yml down",
-    "fasttest-build": "docker compose -f docker-compose.test.yml build sut-fast",
-    "fasttest-cleanup": "docker compose -f docker-compose.test.yml down --rmi local --volumes",
+    "fasttest-stop": "docker compose -f docker-compose.test-custom.yml down",
+    "fasttest-build": "docker compose -f docker-compose.test-custom.yml build sut-fast",
+    "fasttest-cleanup": "docker compose -f docker-compose.test-custom.yml down --rmi local --volumes",
     "materialize-config": "npm run fasttest -- --generate-config .materialized-config.json",
     "generate-model-schema": "npm run materialize-config && npx -p @balena/pinejs abstract-sql-compiler compile .materialized-config.json .materialized-schema.sql",
-    "generate-model-types": "npm run materialize-config && echo '/**\n * This file is auto-generated with `npm run generate-model-types`\n */\n' > src/balena-model.ts && npx abstract-sql-compiler generate-types .materialized-config.json >> src/balena-model.ts",
+    "_generate-model-types": "echo '/**\n * This file is auto-generated with `npm run generate-model-types`\n */\n' > src/balena-model.ts && npx abstract-sql-compiler generate-types .materialized-config.json >> src/balena-model.ts && balena-lint --typescript --fix src/balena-model.ts",
+    "generate-model-types": "npm run materialize-config && npm run _generate-model-types",
     "build": "npm run clean && tsc --project ./tsconfig.build.json && copyup \"src/**/*.sbvr\" \"src/**/*.sql\" dist/",
     "clean": "rimraf dist/",
     "cleanup": "rm .fast-boot.json .pinejs-cache.json || true",
