--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,18 @@
 - commits:
+    - subject: Remove dependent device permissions
+      hash: 444fcb67d85b82d26437ac1f0fe7c42a181c9d1e
+      body: |
+        These are not used in practice and removing them can greatly simplify
+        permission queries
+      footer:
+        Change-type: major
+        change-type: major
+      author: Pagan Gazzard
+      nested: []
+  version: 6.0.0
+  title: ""
+  date: 2022-11-18T16:53:21.417Z
+- commits:
     - subject: "Tests: pin redis to 7.x"
       hash: 1a490ffe761cc28a32c113eb16b9bc715e633ad4
       body: ""
