--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "ipaddr.js": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "loki-grpc-client": "^2.0.0",
     "memoizee": "^0.4.15",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
@@ -116,9 +117,6 @@
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
-  },
-  "optionalDependencies": {
-    "loki-grpc-client": "^1.0.6"
   },
   "devDependencies": {
     "@balena/lint": "^6.2.1",
