--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Add support for setting brotli window size
+      hash: a1c11781d84b6949a79fa5b600971d1478284113
+      body: ""
+      footer:
+        Change-type: minor
+        change-type: minor
+      author: Pagan Gazzard
+      nested: []
+  version: 6.8.0
+  title: ""
+  date: 2022-12-06T17:51:14.748Z
+- commits:
     - subject: Improve device service install permission
       hash: aef9fbc02b01580fdcdbd38a4fbd8d84bcafe2c3
       body: ""
