--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "chai": "^4.3.7",
     "copyfiles": "^2.4.1",
     "husky": "^8.0.2",
+    "libpg-query": "^13.3.0",
     "lint-staged": "^13.1.0",
     "mocha": "^10.1.0",
     "mockery": "^2.1.0",
