--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,67 @@
 - commits:
+    - subject: Update balena/open-balena-base Docker tag to v14.1.3
+      hash: 0571f1450231c59cb99383dcfb3ab963b6bacd5e
+      body: |
+        Update balena/open-balena-base to 14.1.3
+
+        Update balena/open-balena-base from 14.1.0 to 14.1.3
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Renovate Bot
+      nested:
+        - commits:
+            - subject: Update Flowzone workflow to support external contributions
+              hash: 3739ae929bdf588638b2f1849dff98c7f596c5c1
+              body: ""
+              footer:
+                Change-type: patch
+                change-type: patch
+                Signed-off-by: Kyle Harding <kyle@balena.io>
+                signed-off-by: Kyle Harding <kyle@balena.io>
+              author: Kyle Harding
+              nested: []
+            - subject: Build systemd variant for both amd64 and arm64
+              hash: 983dd18bfc389faefeb9ccd54a152b1365824b81
+              body: ""
+              footer:
+                Change-type: patch
+                change-type: patch
+                Signed-off-by: Kyle Harding <kyle@balena.io>
+                signed-off-by: Kyle Harding <kyle@balena.io>
+              author: Kyle Harding
+              nested: []
+          version: open-balena-base-14.1.3
+          title: ""
+          date: 2022-12-08T18:56:05.586Z
+        - commits:
+            - subject: Allow plain TLD certs without UUID
+              hash: 2101ccfcf256a0da7b9fda27ce390d655214d4db
+              body: ""
+              footer:
+                Change-type: patch
+                change-type: patch
+              author: ab77
+              nested: []
+          version: open-balena-base-14.1.2
+          title: ""
+          date: 2022-11-30T02:06:27.321Z
+        - commits:
+            - subject: Correct public|private cert. check
+              hash: a22b6b42b38c5423578117e8d03c3a25ce02cd5d
+              body: ""
+              footer:
+                Change-type: patch
+                change-type: patch
+              author: ab77
+              nested: []
+          version: open-balena-base-14.1.1
+          title: ""
+          date: 2022-11-29T22:26:31.026Z
+  version: 6.9.6
+  title: ""
+  date: 2022-12-11T09:02:42.252Z
+- commits:
     - subject: "CI: Replace pgsanity with libpg-query"
       hash: 360227434a4fb5da7b67d747e69993cc0c7c2e8c
       body: |
