--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^7.23.0",
+    "@balena/abstract-sql-compiler": "^7.22.2-build-web-resource-2-e8b3e6ddc1000f5057fcdfb99dc00596847f0a11-1",
+    "@balena/abstract-sql-to-typescript": "^1.2.2-web-resource-73219661924982b8afd3e4649229287c39f799a1-1",
     "@balena/env-parsing": "^1.1.0",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^14.53.6",
+    "@balena/pinejs": "^14.54.0-build-web-resource-2-e89e970480b25c7840f2adcddb29c53b70dcc2c6-1",
     "@sentry/node": "^7.24.2",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.38",
