--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Avoid calling `retrieveAPIKey` when possible in `getUser`
+      hash: e60443b274459d0d1923aeff95a403c67ade7f21
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Pagan Gazzard
+      nested: []
+  version: 6.10.3
+  title: ""
+  date: 2022-12-21T16:36:45.344Z
+- commits:
     - subject: Improve some typings
       hash: fb559f457ebc8036e420ac7e27eef419cbfc6359
       body: ""
