--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,19 @@
 - commits:
+    - subject: Update dependency jsonwebtoken to 9.0.0 [SECURITY]
+      hash: 56381274472ababab86274f42423f94fd069ce47
+      body: |
+        Update jsonwebtoken to 9.0.0
+
+        Update jsonwebtoken from 8.5.1 to 9.0.0
+      footer:
+        Change-type: minor
+        change-type: minor
+      author: Renovate Bot
+      nested: []
+  version: 7.1.0
+  title: ""
+  date: 2022-12-23T16:26:40.241Z
+- commits:
     - subject: Update device/should_be_operated_by_release index to include device type
       hash: 74cd4af14e1f8a3b8eeb8160a8ee9888ba89ef6b
       body: ""
