--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,19 @@
 - commits:
+    - subject: Update dependency @types/jsonwebtoken to 9.0.0
+      hash: 11a49751ea9ae21bbc6c61a74ecf13bb9827b0e1
+      body: |
+        Update @types/jsonwebtoken to 9.0.0
+
+        Update @types/jsonwebtoken from 8.5.9 to 9.0.0
+      footer:
+        Change-type: minor
+        change-type: minor
+      author: Renovate Bot
+      nested: []
+  version: 7.2.0
+  title: ""
+  date: 2022-12-27T09:03:51.190Z
+- commits:
     - subject: "CI: Fix action config typos"
       hash: 745c834afe29258a2c937c2a9d7f1d386c690262
       body: ""
