--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^7.24.0",
+    "@balena/abstract-sql-compiler": "7.23.1-build-web-resource-2-c89657bb01ceadfb942184d50ccb8781c1548af0-1",
     "@balena/env-parsing": "^1.1.5",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^14.54.7",
+    "@balena/pinejs": "14.55.0-build-web-resource-2-498b0d3f40b2ed2fab212816321728a072b49817-1",
     "@sentry/node": "^7.31.1",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.38",
